# FA_MAI_2025

./: .gitignore  CMakeLists.txt  README.md
lab_01/: CMakeLists.txt
lab_01/include/: functions.h  functons.h  status_codes.h
lab_01/src/: functions.c  main.c
lab_02/: CMakeLists.txt
lab_02/include/: functions.h  status_codes.h
lab_02/src/: functions.c  main.c
lab_03/: CMakeLists.txt
lab_03/include/: functions.h  status_codes.h
lab_03/src/: functions.c  main.c
lab_04/: CMakeLists.txt
lab_04/include/: functions.h  methods.h  status_codes.h
lab_04/src/: functions.c  main.c  methods.c
lab_05/: CMakeLists.txt
lab_05/include/: functions.h  status_codes.h
lab_05/src/: functions.c  main.c
lab_06/: CMakeLists.txt
lab_06/include/: functions.h  methods.h
lab_06/src/: functions.c  main.c  methods.c
lab_07/: CMakeLists.txt
lab_07/include/: functions.h  status_codes.h
lab_07/src/: functions.c  main.c
lab_08/: CMakeLists.txt
lab_08/include/: functions.h  status_codes.h
lab_08/src/: functions.c  main.c
lab_11/: CMakeLists.txt
lab_11/include /: functions.h  status_codes.h
lab_11/src/: functions.c  main.c
lab_12/: CMakeLists.txt
lab_12/include /: functions.h
lab_12/src/: functions.c  main.c
lab_13/: CMakeLists.txt
lab_13/include/: new_flags.h  overfprintf.h  oversprintf.h
lab_13/src/: main.c  new_flags.c  overfprintf.c  (+1 more)
lab_14/: CMakeLists.txt
lab_15/: CMakeLists.txt
lab_16/: CMakeLists.txt
lab_21/: CMakeLists.txt
lab_22/: CMakeLists.txt
lab_24/: CMakeLists.txt
lab_26/: CMakeLists.txt
lab_27/: CMakeLists.txt
(+42 files in other folders)
